add wallet create, restore and server integration

--- a/pubspec_base.yaml
+++ b/pubspec_base.yaml
@@ -210,6 +210,7 @@ flutter:
     - assets/wownero_node_list.yml
     - assets/zano_node_list.yml
     - assets/decred_node_list.yml
+    - assets/dogecoin_electrum_server_list.yml
     - assets/text/
     - assets/faq/
     - assets/animation/
