--- a/.github/workflows/pr_test_build_linux.yml
+++ b/.github/workflows/pr_test_build_linux.yml
@@ -246,7 +246,7 @@ jobs:
           name: cakewallet_linux
 
       - name: Prepare virtual desktop
-        if: ${{ !contains(env.message, 'skip tests') }}
+        if: ${{ contains(env.message, 'run tests') }}
         run: |
             nohup Xvfb :99 -screen 0 720x1280x16 &
             echo DISPLAY=:99 | sudo tee -a $GITHUB_ENV
@@ -262,28 +262,28 @@ jobs:
       #   isn't much in those wallets anyway, we still wouldn't like to leak it to anyone who is able to access github.
 
       - name: Test [confirm_seeds_flow_test]
-        if: ${{ !contains(env.message, 'skip tests') }}
+        if: ${{ contains(env.message, 'run tests') }}
         timeout-minutes: 20
         run: |
           xmessage -timeout 30 "confirm_seeds_flow_test" &
           rm -rf ~/.local/share/com.example.cake_wallet/ ~/Documents/cake_wallet/ ~/cake_wallet
           exec timeout --signal=SIGKILL 900 flutter drive --driver=test_driver/integration_test.dart --target=integration_test/test_suites/confirm_seeds_flow_test.dart
       - name: Test [create_wallet_flow_test]
-        if: ${{ !contains(env.message, 'skip tests') }}
+        if: ${{ contains(env.message, 'run tests') }}
         timeout-minutes: 20
         run: |
           xmessage -timeout 30 "create_wallet_flow_test" &
           rm -rf ~/.local/share/com.example.cake_wallet/ ~/Documents/cake_wallet/ ~/cake_wallet
           exec timeout --signal=SIGKILL 900 flutter drive --driver=test_driver/integration_test.dart --target=integration_test/test_suites/create_wallet_flow_test.dart
       # - name: Test [exchange_flow_test]
-      #   if: ${{ !contains(env.message, 'skip tests') }}
+      #   if: ${{ contains(env.message, 'run tests') }}
       #   timeout-minutes: 20
       #   run: |
       #     xmessage -timeout 30 "exchange_flow_test" &
       #     rm -rf ~/.local/share/com.example.cake_wallet/ ~/Documents/cake_wallet/ ~/cake_wallet
       #     exec timeout --signal=SIGKILL 900 flutter drive --driver=test_driver/integration_test.dart --target=integration_test/test_suites/exchange_flow_test.dart
       - name: Test [restore_wallet_through_seeds_flow_test]
-        if: ${{ !contains(env.message, 'skip tests') }}
+        if: ${{ contains(env.message, 'run tests') }}
         timeout-minutes: 20
         run: |
           xmessage -timeout 30 "restore_wallet_through_seeds_flow_test" &
