--- a/assets/bitcoin_electrum_server_list.yml
+++ b/assets/bitcoin_electrum_server_list.yml
@@ -9,3 +9,7 @@
   uri: fulcrum.sethforprivacy.com:50002
   useSSL: true
   isEnabledForAutoSwitching: true
+-
+  uri: electrum.cakewallet.com:50002
+  useSSL: true
+  isEnabledForAutoSwitching: true
