--- a/pubspec_base.yaml
+++ b/pubspec_base.yaml
@@ -138,6 +138,10 @@ dependencies:
     git:
       url: https://github.com/mrcyjanek/bbqrdart
       ref: b0f3f72911221bafed0ab77359fccd64bc79d524
+  dnssec_proof:
+    git:
+      url: https://github.com/MrCyjaneK/dnssec_proof.git
+      ref: a2b0bdac343afc14fc38dfb81f28147eab50be05
 
 dev_dependencies:
   flutter_test:
