Cw 1106 enable ledger for desktop through ble (#2410)
* fix: remove redundant mobile check for hardware wallet support and add macOS BLE permission handling

* fix: update connect_device_page platform check and add macOS Bluetooth entitlements

* fix: Ledger Monero on Windows

--- a/macos/Runner/RunnerBase.entitlements
+++ b/macos/Runner/RunnerBase.entitlements
@@ -6,6 +6,8 @@
 	<true/>
 	<key>com.apple.security.network.client</key>
 	<true/>
+	<key>com.apple.security.device.bluetooth</key>
+	<true/>
 	<key>keychain-access-groups</key>
 	<array>
 		<string>$(AppIdentifierPrefix)${BUNDLE_ID}</string>
