--- a/macos/Runner/DebugProfileBase.entitlements
+++ b/macos/Runner/DebugProfileBase.entitlements
@@ -8,6 +8,8 @@
 	<true/>
 	<key>com.apple.security.network.server</key>
 	<true/>
+    <key>com.apple.security.device.bluetooth</key>
+    <true/>
 	<key>keychain-access-groups</key>
 	<array>
 		<string>$(AppIdentifierPrefix)${BUNDLE_ID}</string>
