--- a/assets/tron_node_list.yml
+++ b/assets/tron_node_list.yml
@@ -6,6 +6,8 @@
   uri: api.trongrid.io
   is_default: true
   useSSL: true
+  isEnabledForAutoSwitching: true
 - 
   uri: trx.nownodes.io
   useSSL: true
+  isEnabledForAutoSwitching: true
