--- a/assets/decred_node_list.yml
+++ b/assets/decred_node_list.yml
@@ -1,6 +1,8 @@
 -
   uri: default-spv-nodes
   is_default: true
+  isEnabledForAutoSwitching: true
 -
   uri: dcrd.sethforprivacy.com:9108
   useSSL: true
+  isEnabledForAutoSwitching: true
