--- a/assets/polygon_node_list.yml
+++ b/assets/polygon_node_list.yml
@@ -4,7 +4,9 @@
   uri: polygon-bor-rpc.publicnode.com
   useSSL: true
   isDefault: true
+  isEnabledForAutoSwitching: true
 -
   uri: polygon.llamarpc.com
 -
   uri: matic.nownodes.io
+  isEnabledForAutoSwitching: true
