--- a/assets/solana_node_list.yml
+++ b/assets/solana_node_list.yml
@@ -4,10 +4,13 @@
 -
   uri: api.mainnet-beta.solana.com:443
   useSSL: true
+  isEnabledForAutoSwitching: true
 -
   uri: solana-rpc.publicnode.com:443
   useSSL: true
+  isEnabledForAutoSwitching: true
 -
   uri: solana-mainnet.core.chainstack.com
   useSSL: true
   is_default: true
+  isEnabledForAutoSwitching: true
