--- a/assets/wownero_node_list.yml
+++ b/assets/wownero_node_list.yml
@@ -2,10 +2,12 @@
   uri: node3.monerodevs.org:34568
   is_default: true
   useSSL: false
+  isEnabledForAutoSwitching: true
 -
   uri: node2.monerodevs.org:34568
   is_default: false
   useSSL: false
+  isEnabledForAutoSwitching: true
 -
   uri: node.monerodevs.org:34568
   is_default: false
