--- a/assets/zano_node_list.yml
+++ b/assets/zano_node_list.yml
@@ -1,7 +1,9 @@
 -
   uri: 37.27.100.59:10500
   useSSL: false
+  isEnabledForAutoSwitching: true
 -
   uri: zano.cakewallet.com:11211
   is_default: true
   useSSL: false
+  isEnabledForAutoSwitching: true
