--- a/cw_digibyte/pubspec.yaml
+++ b/cw_digibyte/pubspec.yaml
@@ -6,10 +6,11 @@ author: Cake Wallet
 homepage: https://cakewallet.com
 
 environment:
-  sdk: ">=2.17.5 <3.0.0"
-  flutter: ">=1.20.0"
+  sdk: ">=3.7.0 <4.0.0"
+  flutter: ">=3.24.0"
 
 dependencies:
+  bip39: ^1.0.6
   flutter:
     sdk: flutter
   cw_core:
@@ -28,20 +29,13 @@ dependencies:
       url: https://github.com/cake-tech/ledger-flutter-plus-plugins
       path: packages/ledger-bitcoin
       ref: trunk
+  freezed_annotation: ^2.4.4
+  json_annotation: ^4.8.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^2.4.7
-  build_resolvers: ^2.0.9
-  mobx_codegen: ^2.0.7
-  hive_generator: ^1.1.3
-
-dependency_overrides:
-  watcher: ^1.1.0
-  protobuf: ^3.1.0
-  pointycastle: 3.7.4
-  ffi: 2.1.0
-
-flutter:
-  uses-material-design: true
+  build_runner: ^2.4.13
+  freezed: ^2.5.7
+  analyzer: ^7.4.5
+  json_serializable: ^6.7.0
