--- a/cw_bitcoin/pubspec.yaml
+++ b/cw_bitcoin/pubspec.yaml
@@ -42,8 +42,8 @@ dependencies:
       url: https://github.com/cake-tech/bech32.git
   payjoin_flutter:
     git:
-      url: https://github.com/OmarHatem28/payjoin-flutter
-      ref: da83a23f3a011cb49eb3b6513cd485b3fb8867ff #cake-v2
+      url: https://github.com/LtbLightning/payjoin-flutter
+      ref: 01ba81f6d9ba063fd1902a7fd1e185c2d56f6002
   ledger_flutter_plus: ^1.4.1
   ledger_bitcoin:
     git:
