--- a/cw_bitcoin_cash/pubspec.yaml
+++ b/cw_bitcoin_cash/pubspec.yaml
@@ -6,7 +6,7 @@ author: Cake Wallet
 homepage: https://cakewallet.com
 
 environment:
-  sdk: '>=2.19.0 <3.0.0'
+  sdk: ">=2.17.5 <3.0.0"
   flutter: ">=1.20.0"
 
 dependencies:
