--- a/.gitignore
+++ b/.gitignore
@@ -140,6 +140,7 @@ lib/tron/tron.dart
 lib/wownero/wownero.dart
 lib/zano/zano.dart
 lib/decred/decred.dart
+lib/dogecoin/dogecoin.dart
 
 ios/Runner/Assets.xcassets/AppIcon.appiconset/AppIcon@2x.png
 ios/Runner/Assets.xcassets/AppIcon.appiconset/AppIcon@2x~ipad.png
