CW-1099-Add-Doge-coin-to-Cake-Wallet (#2396)
* add wallet create, restore and server integration

* update transaction fee calculation

* Updated tool/configure.dart

* Add dogecoin support to app_config

* minor fix [skip ci]

* Update model_generator.sh

* remove cw_bitcoin import from  lib/ directory

* update bitcoin base

* update default node

* add passphrase an QR restore option

* add Dogecoin support for message signing

* add Dogecoin support across wallet features

* fix edit subaddress

Updated the isElectrum getter to include WalletType.dogecoin, ensuring Dogecoin wallets are correctly identified as Electrum-compatible.

* Update configure.dart

* fix: address label not saved

* remove unused derivationPath

Co-authored-by: Omar Hatem <omarh.ismail1@gmail.com>

* address review comments

* fix generateInitialAddresses type

* enable auto switching for Dogecoin nodes

---------

Co-authored-by: Omar Hatem <omarh.ismail1@gmail.com>

--- a/pubspec_base.yaml
+++ b/pubspec_base.yaml
@@ -177,7 +177,7 @@ dependency_overrides:
   bitcoin_base:
     git:
       url: https://github.com/cake-tech/bitcoin_base
-      ref: cake-update-v10
+      ref: cake-update-v11
   ffi: 2.1.0
   ledger_flutter_plus:
     git:
@@ -223,6 +223,7 @@ flutter:
     - assets/wownero_node_list.yml
     - assets/zano_node_list.yml
     - assets/decred_node_list.yml
+    - assets/dogecoin_electrum_server_list.yml
     - assets/text/
     - assets/faq/
     - assets/animation/
