--- a/pubspec_base.yaml
+++ b/pubspec_base.yaml
@@ -76,6 +76,7 @@ dependencies:
   device_info_plus: ^9.1.0
   base32: 2.1.3
   in_app_review: ^2.0.6
+  image_picker: ^1.1.2
   cake_backup:
     git:
       url: https://github.com/cake-tech/cake_backup.git
