fix: syntax error in InfoBase.plist

--- a/ios/Runner/InfoBase.plist
+++ b/ios/Runner/InfoBase.plist
@@ -301,6 +301,7 @@
             <array>
                 <string>dogecoin-wallet</string>
             </array>
+        </dict>
     </array>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
