feat: use better embedded Tor

--- a/.github/workflows/pr_test_build_android.yml
+++ b/.github/workflows/pr_test_build_android.yml
@@ -219,6 +219,17 @@ jobs:
           popd
           cp /opt/generic_cache/key.jks android/app
 
+      - name: Fetch prebuilt Torch
+        run: |
+          set -x -e
+          pushd scripts
+            wget https://github.com/MrCyjaneK/torch_dart/releases/download/4f987d4/torch_dart-4f987d4.tar.gz -O torch_dart.tar.gz
+            mkdir torch_dart
+            pushd torch_dart
+              tar -xzf ../torch_dart.tar.gz
+            popd
+          popd
+
       - name: Execute Build and Setup Commands
         run: |
           pushd scripts/android
