--- a/.gitignore
+++ b/.gitignore
@@ -228,3 +228,5 @@ flatpak-build/
 **/linux/flutter/generated_plugin_registrant.cc
 **/linux/flutter/generated_plugin_registrant.h
 **/linux/flutter/generated_plugins.cmake
+
+scripts/torch_dart/
