--- a/cw_mweb/pubspec.yaml
+++ b/cw_mweb/pubspec.yaml
@@ -15,11 +15,13 @@ dependencies:
   plugin_platform_interface: ^2.0.2
   cw_core:
     path: ../cw_core
+  ffi: ^2.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  ffigen:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
