--- a/cw_evm/pubspec.yaml
+++ b/cw_evm/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
       url: https://github.com/cake-tech/ledger-flutter-plus-plugins
       path: packages/ledger-ethereum
       ref: f4761cd5171d4c1e2e42fd3298261650539fb2db
+  bitbox_flutter:
+    path: ../scripts/bitbox_flutter
 
 dependency_overrides:
   web3dart:
