feat: allow building without payjoin

--- a/cw_bitcoin/.gitignore
+++ b/cw_bitcoin/.gitignore
@@ -72,3 +72,8 @@ build/
 !**/ios/**/default.mode2v3
 !**/ios/**/default.pbxuser
 !**/ios/**/default.perspectivev3
+
+/lib/payjoin/payjoin.dart
+
+/pubspec.yaml
+/pubspec.lock
