feat: allow building without sp_scanner

--- a/cw_bitcoin/.gitignore
+++ b/cw_bitcoin/.gitignore
@@ -74,6 +74,7 @@ build/
 !**/ios/**/default.perspectivev3
 
 /lib/payjoin/payjoin.dart
+/lib/silent_payments/sp.dart
 
 /pubspec.yaml
 /pubspec.lock
