chore: update BitBox Flutter path references and include build steps in CI workflows

--- a/.github/workflows/pr_test_build_android.yml
+++ b/.github/workflows/pr_test_build_android.yml
@@ -247,6 +247,13 @@ jobs:
             ./build_mwebd.sh --dont-install
           popd
 
+      - name: Build Bitbox Flutter
+        run: |
+          set -x -e
+          pushd scripts
+            ./build_bitbox_flutter.sh
+          popd
+
       - name: Build Decred
         run: |
           set -x -e
