--- a/.github/workflows/pr_test_build_linux.yml
+++ b/.github/workflows/pr_test_build_linux.yml
@@ -217,6 +217,13 @@ jobs:
             ./build_monero_all.sh
           popd
 
+      - name: Build Bitbox Flutter
+        run: |
+          set -x -e
+          pushd scripts
+            ./build_bitbox_flutter.sh
+          popd
+
       - name: Install Flutter dependencies
         run: |
           flutter pub get
