--- a/cw_bitcoin/pubspec.yaml
+++ b/cw_bitcoin/pubspec.yaml
@@ -55,7 +55,7 @@ dependencies:
       url: https://github.com/cake-tech/ledger-flutter-plus-plugins
       path: packages/ledger-litecoin
   bitbox_flutter:
-    path: ../../bitbox_flutter
+    path: ../scripts/bitbox_flutter
   socks_socket:
     git:
       url: https://github.com/sneurlax/socks_socket
