Switch to cake.mempool.space

--- a/assets/bitcoin_electrum_server_list.yml
+++ b/assets/bitcoin_electrum_server_list.yml
@@ -1,5 +1,5 @@
 -
-  uri: btc-electrum.cakewallet.com:50002
+  uri: cake.mempool.space:50002
   useSSL: true
   isDefault: true
   isEnabledForAutoSwitching: true
@@ -7,9 +7,5 @@
   uri: electrs.cakewallet.com:50001
 -
   uri: fulcrum.sethforprivacy.com:50002
-  useSSL: true
-  isEnabledForAutoSwitching: true
--
-  uri: electrum.cakewallet.com:50002
   useSSL: true
   isEnabledForAutoSwitching: true
