chore: add `gomobile init` to Android PR test build workflow

--- a/.github/workflows/pr_test_build_android.yml
+++ b/.github/workflows/pr_test_build_android.yml
@@ -248,6 +248,7 @@ jobs:
         run: |
           set -x -e
           pushd scripts
+            gomobile init;
             ./build_bitbox_flutter.sh --dont-install
           popd
 
