fix: silence unhandled async errors in bitcoin_base fix: wrap all ProxySocket calls in try catch just to be sure

--- a/cw_dogecoin/pubspec.yaml
+++ b/cw_dogecoin/pubspec.yaml
@@ -39,7 +39,7 @@ dependency_overrides:
   bitcoin_base:
     git:
       url: https://github.com/cake-tech/bitcoin_base
-      ref: cake-update-v11
+      ref: 490046a3e074dd7b9aaf7098a5efe61b6246d3b2
 
 
 # For information on the generic Dart part of this file, see the
