--- a/pubspec_base.yaml
+++ b/pubspec_base.yaml
@@ -180,7 +180,7 @@ dependency_overrides:
   bitcoin_base:
     git:
       url: https://github.com/cake-tech/bitcoin_base
-      ref: cake-update-v11
+      ref: 490046a3e074dd7b9aaf7098a5efe61b6246d3b2
   ffi: 2.1.0
   ledger_flutter_plus:
     git:
