chore: update Android PR test build workflow and add file existence check in `build_bitbox_flutter.sh`

--- a/.github/workflows/pr_test_build_android.yml
+++ b/.github/workflows/pr_test_build_android.yml
@@ -249,7 +249,7 @@ jobs:
           set -x -e
           pushd scripts
             gomobile init;
-            ./build_bitbox_flutter.sh --dont-install
+            ./build_bitbox_flutter.sh
           popd
 
       - name: Install Flutter dependencies
