--- a/cw_core/pubspec.yaml
+++ b/cw_core/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   path_provider: ^2.0.11
   mobx: ^2.0.7+4
   flutter_mobx: ^2.0.6+1
-  intl: ^0.19.0
+  intl: any
   encrypt: ^5.0.1
   decimal: ^2.3.3
   cake_backup:
