--- a/cw_zano/pubspec.yaml
+++ b/cw_zano/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   path_provider: ^2.0.11
   mobx: ^2.1.4
   flutter_mobx: ^2.0.6+1
-  intl: ^0.19.0
+  intl: any
   decimal: ^2.3.3
   cw_core:
     path: ../cw_core
