--- a/.gitignore
+++ b/.gitignore
@@ -205,6 +205,7 @@ ios/MoneroWallet.framework/MoneroWallet
 ios/WowneroWallet.framework/WowneroWallet
 ios/ZanoWallet.framework/ZanoWallet
 *_libwallet2_api_c.dylib
+libuniffi_yttrium.so
 
 .flatpak-builder
 cake_wallet.flatpak
