feat: scaffold digibyte wallet type plumbing

--- a/pubspec_base.yaml
+++ b/pubspec_base.yaml
@@ -223,6 +223,7 @@ flutter:
     - assets/zano_node_list.yml
     - assets/decred_node_list.yml
     - assets/dogecoin_electrum_server_list.yml
+    - assets/digibyte_electrum_server_list.yml
     - assets/text/
     - assets/faq/
     - assets/animation/
