--- a/cw_core/pubspec.yaml
+++ b/cw_core/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
       ref: e6232c53c1595469931ababa878759a067c02e94
   torch_dart:
     path: ../scripts/torch_dart
+  blockchain_utils:
+    git:
+      url: https://github.com/cake-tech/blockchain_utils
+      ref: cake-update-v2
 
 dev_dependencies:
   flutter_test:
