--- a/cw_wownero/pubspec.yaml
+++ b/cw_wownero/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   path_provider: ^2.0.11
   mobx: ^2.0.7+4
   flutter_mobx: ^2.0.6+1
-  intl: ^0.19.0
+  intl: any
   encrypt: ^5.0.1
   polyseed: ^0.0.7
   cw_core:
@@ -24,7 +24,7 @@ dependencies:
   monero:
     git:
       url: https://github.com/mrcyjanek/monero_c
-      ref: 5225c47e5033d46bfd60e612e87b24c562f67efa # monero_c hash
+      ref: 07f7a7f80735130ebfa5842ddee5139076408c0d # monero_c hash
       path: impls/monero.dart
   mutex: ^3.1.0
 
