--- a/pubspec_base.yaml
+++ b/pubspec_base.yaml
@@ -3,7 +3,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  intl: ^0.19.0
+  intl: any
   url_launcher: 6.3.1
   qr_flutter:
     git:
@@ -42,7 +42,7 @@ dependencies:
   flutter_spinkit: ^5.1.0
   uni_links:
     git:
-      url: https://github.com/MrCyjaneK/uni_links
+      url: https://github.com/cake-tech/uni_links
       ref: 1989db3f5d625e2fffbad7b85a3b1b8c78c6dfa1
       path: uni_links
   lottie: ^3.3.1
@@ -121,7 +121,7 @@ dependencies:
     git:
       url: https://github.com/cake-tech/on_chain.git
       ref: cake-update-v2
-  reown_walletkit: ^1.1.5+1
+  reown_walletkit: 1.3.1
   blockchain_utils:
     git:
       url: https://github.com/cake-tech/blockchain_utils
@@ -142,7 +142,7 @@ dependencies:
   dnssec_proof:
     git:
       url: https://github.com/MrCyjaneK/dnssec_proof.git
-      ref: a2b0bdac343afc14fc38dfb81f28147eab50be05
+      ref: b48a9defddce036048bae02e2069ebcbd6824afc
   torch_dart:
     path: ./scripts/torch_dart
 
@@ -176,6 +176,11 @@ dependency_overrides:
       url: https://github.com/cake-tech/web3dart.git
       ref: cake
   flutter_secure_storage_platform_interface: 1.0.2
+  flutter_secure_storage:
+    git:
+      url: https://github.com/cake-tech/flutter_secure_storage.git
+      path: flutter_secure_storage
+      ref: ca897a08677edb443b366352dd7412735e098e7b
   protobuf: ^3.1.0
   bitcoin_base:
     git:
@@ -192,6 +197,7 @@ dependency_overrides:
       ref: 27ad7c2efae8d7460325c74b90f660085cbd0685
   web_socket_channel: ^3.0.2
   freezed_annotation: 2.4.4
+  intl: 0.20.2
 
 flutter_icons:
   image_path: "assets/images/app_logo.png"
