--- a/pubspec_base.yaml
+++ b/pubspec_base.yaml
@@ -89,12 +89,12 @@ dependencies:
   url_launcher_linux: 3.1.1 # https://github.com/flutter/flutter/issues/153083
   sensitive_clipboard:
     git:
-      url: https://github.com/MrCyjaneK/sensitive_clipboard
+      url: https://github.com/cake-tech/sensitive_clipboard
       ref: 288c7ee2d63b459bc735f7dc89321b29a1f12fae
   eth_sig_util: ^0.0.9
   ens_dart:
     git:
-      url: https://github.com/MrCyjaneK/ens_dart.git
+      url: https://github.com/cake-tech/ens_dart.git
       ref: 9fa09b9db69b8645d5d50a844652aa570451d101
   fluttertoast: 8.2.12
 #  tor:
@@ -109,7 +109,7 @@ dependencies:
   polyseed: ^0.0.7
   nostr_tools:
     git:
-      url: https://github.com/MrCyjaneK/nostr_tools.git
+      url: https://github.com/cake-tech/nostr_tools.git
       ref: 089d5a2dd751429a040ba10fb24fcbae564053e5
   solana: ^0.31.0+1
   ledger_flutter_plus:
