feat: Integrate Base support into various workflows and documentation

--- a/.github/workflows/no_restricted_imports.yaml
+++ b/.github/workflows/no_restricted_imports.yaml
@@ -20,6 +20,7 @@ jobs:
             "cw_mweb"
             "cw_nano"
             "cw_polygon"
+            "cw_base"
             "cw_solana"
             "cw_tron"
             "cw_wownero"
