feat: Addingbase config to windows and secret key support

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -23,6 +23,7 @@ analyzer:
     lib/tron/cw_tron.dart,
     lib/wownero/cw_wownero.dart,
     lib/zano/cw_zano.dart,
+    lib/base/cw_base.dart,
     ]
   language:
     strict-casts: true
